1) update examples 2) quick/dirty rebrand 3) remove json import/download

--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h3 class="modal-title">Swagger Editor Preferences</h3>
+  <h3 class="modal-title">opspec editor Preferences</h3>
 </div>
 <div class="modal-body preferences-modal">
   <form class="preferences-form">
